Fixed decision lights on Firefox

--- a/owlcms/src/main/webapp/VAADIN/themes/competition/styles.css
+++ b/owlcms/src/main/webapp/VAADIN/themes/competition/styles.css
@@ -361,9 +361,11 @@ textarea.v-textarea-readonly,
 .white .lifterGrid input.v-textfield-readonly,
 .white .lifterGrid textarea.v-textarea-readonly {
 	-webkit-border-image: none;
+	-moz-border-image: none;
 	border: thin solid;
 	border-color: silver;
 	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
 	border-style: solid;
 	margin-bottom: 2px;
 	background-color: rgb(240, 240, 240);
@@ -421,7 +423,7 @@ textarea.v-textarea-readonly,
 	line-height: 1.1em;
 }
 .newAttemptBoard.s4_3 .v-label-name {font-size: 6.5em; line-height: 1.2em;}
-.newAttemptBoard.s720p .v-label-name {font-size: 7em;}
+.newAttemptBoard.s720p .v-label-name {font-size: 8em;}
 .newAttemptBoard.s1080p .v-label-name {font-size: 9.5em;}
 
 
@@ -469,8 +471,8 @@ textarea.v-textarea-readonly,
 
 .newAttemptBoard .loadChart div.plate {
 	border-color: white !important;
-	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
+	border-radius: 8px;
 	border-width: 2px;
 	margin-left: 5px;
 }
@@ -482,11 +484,10 @@ textarea.v-textarea-readonly,
 
 .newAttemptBoard .decisionLight {
 	border-color: white !important;
-	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
+	border-radius: 8px;
 	border-width: 4px;
-	margin: 10px;
-	zoom: 85%;
+	zoom: 100%;
 }
 
 
@@ -947,10 +948,10 @@ iframe#org.concordiainternational.competition.ui.CompetitionApplicationWidgetSet
 	display:none;
 }
 
-.v-verticallayout > div:nth-child(1) > div:nth-child(4) {
+/* .v-verticallayout > div:nth-child(1) > div:nth-child(4) {
 	display: none;
 }
 
 .v-verticallayout > div:nth-child(1) > div:nth-child(5) {
 	display: none;
-}
+} */
